gaussia-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gaussia-ui
    app.kubernetes.io/component: gaussia-ui
    app.kubernetes.io/instance: gaussia-ui
  name: gaussia-ui
  namespace: gaussia-evalhub-quickstart
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8501-tcp
    port: 8501
    protocol: TCP
    targetPort: 8501
  selector:
    deployment: gaussia-ui
  sessionAffinity: None
  type: ClusterIP
